--- a/src/client/package.json
+++ b/src/client/package.json
@@ -26,6 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "./node_modules/jest/bin/jest.js",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,18 +42,12 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^23.6.0",
+    "cypress": "^3.1.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.6.3",
     "waait": "^1.0.2"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "verbose": true,
-    "testURL": "http://localhost/"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
