--- a/src/client/package.json
+++ b/src/client/package.json
@@ -27,6 +27,7 @@
     "build": "react-scripts build",
     "test": "./node_modules/jest/bin/jest.js",
     "cypress:open": "cypress open",
+    "e2e": "cypress run",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
